Fix spacing for social icons on team page

--- a/frontend/src/stylesheets/components/team/_team.scss
+++ b/frontend/src/stylesheets/components/team/_team.scss
@@ -22,9 +22,12 @@
 }
 
 .team-about {
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   height: 350px;
   width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
